--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,20 @@
-*.class
-*.log
-
-# sbt specific
-.cache
+.DS_Store
+logs
+project/project
+project/target
+target
+tmp
 .history
-.lib/
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
+/.idea
+/*.iml
+*.sc
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+/bin/
+/.worksheet/
+*.cache
 
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
